--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,7 +32,7 @@
       <property name="childrenCollapsible">
        <bool>false</bool>
       </property>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <widget class="QLabel" name="label_3">
@@ -195,6 +195,7 @@
      <string>File</string>
     </property>
     <addaction name="actionReinitialize_and_Load_File"/>
+    <addaction name="actionInitialize"/>
     <addaction name="separator"/>
     <addaction name="actionLog_Current_Session"/>
     <addaction name="separator"/>
@@ -205,7 +206,6 @@
      <string>Simulator</string>
     </property>
     <addaction name="actionClear_Registers"/>
-    <addaction name="actionReinitialize"/>
     <addaction name="separator"/>
     <addaction name="actionRun"/>
    </widget>
@@ -222,6 +222,7 @@
     <property name="title">
      <string>About</string>
     </property>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuSimulator"/>
@@ -309,6 +310,11 @@
   <action name="actionConsole">
    <property name="text">
     <string>Console</string>
+   </property>
+  </action>
+  <action name="actionInitialize">
+   <property name="text">
+    <string>Initialize</string>
    </property>
   </action>
  </widget>
