--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,9 @@
 <RCC>
-    <qresource prefix="/img"/>
     <qresource prefix="/stylesheet">
         <file>StyleSheet/style.qss</file>
+    </qresource>
+    <qresource prefix="/MapCodes">
+        <file>Commands.csv</file>
+        <file>Registers.csv</file>
     </qresource>
 </RCC>
