--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,7 +66,11 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QTextBrowser" name="textBrowser"/>
+            <widget class="QTextBrowser" name="textBrowser">
+             <property name="autoFormatting">
+              <set>QTextEdit::AutoBulletList</set>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -104,7 +108,7 @@
            </font>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <property name="iconSize">
            <size>
@@ -114,7 +118,10 @@
           </property>
           <widget class="QWidget" name="tab">
            <attribute name="title">
-            <string>Tab 1</string>
+            <string>Text</string>
+           </attribute>
+           <attribute name="toolTip">
+            <string>Assembly Code Section</string>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout">
             <property name="leftMargin">
@@ -132,7 +139,7 @@
             <item>
              <widget class="QLabel" name="label_2">
               <property name="text">
-               <string>Data</string>
+               <string>Text</string>
               </property>
              </widget>
             </item>
@@ -143,7 +150,10 @@
           </widget>
           <widget class="QWidget" name="tab_2">
            <attribute name="title">
-            <string>Tab 2</string>
+            <string>Data</string>
+           </attribute>
+           <attribute name="toolTip">
+            <string>Global Data Section</string>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <property name="spacing">
@@ -164,7 +174,7 @@
             <item>
              <widget class="QLabel" name="label">
               <property name="text">
-               <string>Text</string>
+               <string>Data</string>
               </property>
              </widget>
             </item>
