--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -242,6 +242,7 @@
     </property>
     <addaction name="actionSee_LabelMap"/>
     <addaction name="actionSee_DataMap"/>
+    <addaction name="actionCustom_Function"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuSimulator"/>
@@ -285,6 +286,7 @@
    <addaction name="actionSee_LabelMap"/>
    <addaction name="actionSee_DataMap"/>
    <addaction name="actionRun_Step_By_Step"/>
+   <addaction name="actionCustom_Function"/>
   </widget>
   <action name="actionReinitialize_and_Load_File">
    <property name="text">
@@ -354,6 +356,11 @@
   <action name="actionRun_Step_By_Step">
    <property name="text">
     <string>Run Step By Step</string>
+   </property>
+  </action>
+  <action name="actionCustom_Function">
+   <property name="text">
+    <string>Custom Function</string>
    </property>
   </action>
  </widget>
