--- a/StyleSheet/style.qss
+++ b/StyleSheet/style.qss
@@ -16,7 +16,16 @@ QTextBrowser{
 }
 
 #MainWindow  QTextBrowser{
-	background-color: black;
+	background-color: rgb(0,80,120);
 	color: white;
 	border: none;
+}
+
+QToolBar{
+	background-color: lightgray;
+	
+}
+QMenuBar{
+	font-family:arial;
+	font-size:18px;
 }
