--- a/about_help.ui
+++ b/about_help.ui
@@ -37,9 +37,15 @@
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QTextBrowser" name="textBrowser">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>399</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
