--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -227,7 +227,14 @@
               </widget>
              </item>
              <item>
-              <widget class="QTextBrowser" name="textBrowser_5"/>
+              <widget class="QTextBrowser" name="textBrowser_5">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -308,7 +315,7 @@
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
