--- a/resources.qrc
+++ b/resources.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/stylesheet">
         <file>StyleSheet/style.qss</file>
     </qresource>
+    <qresource prefix="/Files">
+        <file>TimeLine.html</file>
+    </qresource>
 </RCC>
