--- a/StyleSheet/style.qss
+++ b/StyleSheet/style.qss
@@ -33,3 +33,8 @@ QMenuBar{
 #frame{
 	border: 2px solid black
 }
+QTableWidget{
+	background-color: rgb(0,80,120);
+	color: white;
+	font: 18px bold arial;
+}
