--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -124,7 +124,7 @@
             </font>
            </property>
            <property name="currentIndex">
-            <number>0</number>
+            <number>2</number>
            </property>
            <property name="iconSize">
             <size>
@@ -140,6 +140,9 @@
              <string>Assembly Code Section</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout">
+             <property name="spacing">
+              <number>4</number>
+             </property>
              <property name="leftMargin">
               <number>0</number>
              </property>
@@ -173,7 +176,7 @@
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <property name="spacing">
-              <number>0</number>
+              <number>4</number>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -301,7 +304,7 @@
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
