--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -225,10 +225,10 @@
              <item>
               <widget class="QTabWidget" name="tabWidget">
                <property name="tabPosition">
-                <enum>QTabWidget::West</enum>
+                <enum>QTabWidget::East</enum>
                </property>
                <property name="tabShape">
-                <enum>QTabWidget::Triangular</enum>
+                <enum>QTabWidget::Rounded</enum>
                </property>
                <property name="currentIndex">
                 <number>0</number>
@@ -389,7 +389,7 @@
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
