--- a/StyleSheet/style.qss
+++ b/StyleSheet/style.qss
@@ -38,3 +38,12 @@ QTableWidget{
 	color: white;
 	font: 18px bold arial;
 }
+QListWidget{
+	background-color: rgb(0,80,120);
+	color: white;
+	font: 18px bold arial;
+}
+QListWidget::item:hover{
+	background-color:brown;
+	
+}
