--- a/StyleSheet/stylesForHtml.css
+++ b/StyleSheet/stylesForHtml.css
@@ -12,7 +12,7 @@ h1{
     text-decoration-color: rgb(173, 13, 139);
 }
 
-p{
+.abc{
     color:rgb(51, 1, 39);
     font-size: medium;
     text-align:left;
