Nothing just looking
Just 1 thing.. why did u define the function in the header file.. I just changed that.. felt weird sorry XD

--- a/resources.qrc
+++ b/resources.qrc
@@ -4,9 +4,7 @@
         <file>StyleSheet/stylesForHtml.css</file>
         <file>StyleSheet/new2.qss</file>
     </qresource>
-    <qresource prefix="/Files">
-        <file>TimeLine.html</file>
-    </qresource>
+    <qresource prefix="/Files"/>
     <qresource prefix="/Html">
         <file>Html/index.html</file>
     </qresource>
