--- a/resources.qrc
+++ b/resources.qrc
@@ -9,5 +9,6 @@
     </qresource>
     <qresource prefix="/Icons">
         <file>Icons/Icon.png</file>
+        <file>Icons/Icon1.png</file>
     </qresource>
 </RCC>
